loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:3: error: not found: type lightGray
setCouleurCorps(c:lightGray) 
                  ^LoopStairs:3: error: not found: value c
setCouleurCorps(c:lightGray) 
                ^